Updated build path and added region to test stage

--- a/.github/workflows/generate-token.yaml
+++ b/.github/workflows/generate-token.yaml
@@ -40,7 +40,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: build
-          path: "generate-token.${{ github.run_id }}.zip"
+          path: build/*
       
   test:
     name: Test
@@ -60,6 +60,7 @@ jobs:
         env:
           AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
           AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
+          AWS_REGION: ${{ secrets.AWS_REGION }}
 
   publish:
     name: Publish
