--- a/.github/workflows/generate-token.yaml
+++ b/.github/workflows/generate-token.yaml
@@ -35,6 +35,11 @@ jobs:
           VERSION: ${{ github.run_id }}
           WORKING_DIRECTORY: cmd/generate-token
 
+      - name: "ls"
+        run: |
+          ls
+          ls build
+
       - name: Archive Build Artifacts
         if: (github.ref == 'ref/heads/master' && github.event_name == 'push') || github.event_name == 'pull_request' || github.event_name == 'workflow_dispatch'
         uses: actions/upload-artifact@v2
