Updated tests to test main

--- a/.github/workflows/generate-token.yaml
+++ b/.github/workflows/generate-token.yaml
@@ -56,7 +56,10 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Test
-        run: go test ./...
+        run: |
+          go test ./...
+          cd cmd/generate-token
+          go test
         env:
           AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
           AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
