--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -39,7 +39,13 @@ jobs:
       - name: Plan
         working-directory: terraform
         id: plan
-        run: terraform plan
+        run: |
+          terraform plan \
+            --var AWS_REGION=${AWS_REGION} \
+            --var AWS_ACCESS_KEY=${AWS_ACCESS_KEY} \
+            --var AWS_ACCESS_KEY=${AWS_SECRET_KEY} \
+            --var AWS_ACCOUNT_ID=${AWS_ACCOUNT_ID} \
+            --var S3_SOURCE_BUCKET=${S3_SOURCE_BUCKET}
         env:
           AWS_REGION: ${{ secrets.AWS_REGION }}
           AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
