Rearranged the vars

--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -41,6 +41,9 @@ jobs:
         id: plan
         run: terraform plan
         env:
+          AWS_REGION: ${{ secrets.AWS_REGION }}
+          AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
+          AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
           TF_VAR_AWS_REGION: ${{ secrets.AWS_REGION }}
           TF_VAR_AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
           TF_VAR_AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
@@ -81,6 +84,9 @@ jobs:
         working-directory: terraform
         run: terraform apply --auto-approve
         env:
+          AWS_REGION: ${{ secrets.AWS_REGION }}
+          AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
+          AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
           TF_VAR_AWS_REGION: ${{ secrets.AWS_REGION }}
           TF_VAR_AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
           TF_VAR_AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
