--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -80,7 +80,7 @@ jobs:
             })
 
       - name: Apply
-        if: github.ref == 'ref/heads/master' && github.event_name == 'push'
+        if: (github.ref == 'ref/heads/master' && github.event_name == 'push') || github.event_name == 'workflow_dispatch'
         working-directory: terraform
         run: terraform apply --auto-approve
         env:
