--- a/app/login-client/package.json
+++ b/app/login-client/package.json
@@ -2,8 +2,8 @@
   "name": "login-client",
   "version": "0.1.0",
   "private": true,
+  "homepage": "authorize",
   "dependencies": {
-    "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "classnames": "^2.3.1",
@@ -38,6 +38,7 @@
     ]
   },
   "devDependencies": {
+    "@types/node": "^15.6.1",
     "node-sass": "^5.0.0"
   }
 }
