--- a/app/login-client/package.json
+++ b/app/login-client/package.json
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "@types/node": "^15.6.1",
-    "node-sass": "^6.0.0"
+    "node-sass": "^6.0.0",
+    "sass-loader": "^10.1.1"
   }
 }
