--- a/.github/workflows/generate-token.yaml
+++ b/.github/workflows/generate-token.yaml
@@ -6,12 +6,12 @@ on:
     branches:
       - "master"
     paths:
-      - "**.go"
+      - "cmd/generate-token/**.go"
   pull_request:
     branches:
       - "master"
     paths:
-      - "**.go"
+      - "cmd/generate-token/**.go"
 
 jobs:
   build:
@@ -27,9 +27,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build
-        run: |
-          chmod +x ./scripts/build.sh
-          ./scripts/build.sh
+        run: ./scripts/build.sh
         env:
           NAME: generate-token
           VERSION: ${{ github.run_id }}
@@ -81,9 +79,7 @@ jobs:
           path: dist/
 
       - name: Upload To S3
-        run: |
-          chmod +x ./scripts/publish.sh
-          ./scripts/publish.sh
+        run: ./scripts/publish.sh
         env:
           AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
           AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
@@ -97,14 +93,13 @@ jobs:
     runs-on: ubuntu-latest
     if: (github.ref == 'ref/heads/master' && github.event_name == 'push') || github.event_name == 'pull_request' || github.event_name == 'workflow_dispatch'
     needs: publish
+    environment: Dev
     steps:
       - name: Checkout
         uses: actions/checkout@v2
 
       - name: Deploy
-        run: |
-          chmod +x ./scripts/deploy.sh
-          ./scripts/deploy.sh
+        run: ./scripts/deploy.sh
         env:
           AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
           AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
@@ -119,14 +114,13 @@ jobs:
     runs-on: ubuntu-latest
     if: (github.ref == 'ref/heads/master' && github.event_name == 'push') || github.event_name == 'pull_request' || github.event_name == 'workflow_dispatch'
     needs: publish
+    environment: Test
     steps:
       - name: Checkout
         uses: actions/checkout@v2
 
       - name: Deploy
-        run: |
-          chmod +x ./scripts/deploy.sh
-          ./scripts/deploy.sh
+        run: ./scripts/deploy.sh
         env:
           AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
           AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
@@ -147,9 +141,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Deploy
-        run: |
-          chmod +x ./scripts/deploy.sh
-          ./scripts/deploy.sh
+        run: ./scripts/deploy.sh
         env:
           AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
           AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
