--- a/.github/workflows/create-user.yaml
+++ b/.github/workflows/create-user.yaml
@@ -38,7 +38,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: build
-          path: cmd/create-user/create-user.${{github.run_id}}.zip
+          path: cmd/create-user/build.zip
       
   test:
     name: Test
@@ -84,9 +84,10 @@ jobs:
           AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
           AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
           AWS_REGION: ${{ secrets.AWS_REGION }}
-          FILE: dist/create-user.${{github.run_id}}.zip
+          FILE: dist/build.zip
           S3_BUCKET: ${{ secrets.S3_SOURCE_BUCKET }}
           S3_KEY: create-user/${{github.run_id}}.zip
+          NAME: goidc-create-user
 
   deployDev:
     name: Deploy Dev
@@ -99,15 +100,13 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Deploy
-        run: ./scripts/deploy.sh
+        run: ./scripts/deploy_api.sh
         env:
           AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
           AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
           AWS_REGION: ${{ secrets.AWS_REGION }}
-          S3_BUCKET: ${{ secrets.S3_SOURCE_BUCKET }}
-          SOURCE_ZIP: create-user/${{github.run_id}}.zip
-          NAME: create-user
-          ENV: dev
+          DESCRIPTION: "Deploy Function goidc-create-user (${{github.run_id}})"
+          STAGE: dev
 
   deployTest:
     name: Deploy Test
@@ -120,15 +119,13 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Deploy
-        run: ./scripts/deploy.sh
+        run: ./scripts/deploy_api.sh
         env:
           AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
           AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
           AWS_REGION: ${{ secrets.AWS_REGION }}
-          S3_BUCKET: ${{ secrets.S3_SOURCE_BUCKET }}
-          SOURCE_ZIP: create-user/${{github.run_id}}.zip
-          NAME: create-user
-          ENV: test
+          DESCRIPTION: "Deploy Function goidc-create-user (${{github.run_id}})"
+          STAGE: test
 
   deployProd:
     name: Deploy Prod
@@ -141,12 +138,10 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Deploy
-        run: ./scripts/deploy.sh
+        run: ./scripts/deploy_api.sh
         env:
           AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
           AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
           AWS_REGION: ${{ secrets.AWS_REGION }}
-          S3_BUCKET: ${{ secrets.S3_SOURCE_BUCKET }}
-          SOURCE_ZIP: create-user/${{github.run_id}}.zip
-          NAME: create-user
-          ENV: prod
+          DESCRIPTION: "Deploy Function goidc-create-user (${{github.run_id}})"
+          STAGE: prod
