--- a/.github/workflows/create-user.yaml
+++ b/.github/workflows/create-user.yaml
@@ -13,6 +13,11 @@ on:
     paths:
       - "cmd/create-user/**.go"
 
+env:
+  AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
+  AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
+  AWS_REGION: ${{ secrets.AWS_REGION }}
+
 jobs:
   build:
     name: Build
@@ -58,16 +63,14 @@ jobs:
           go test ./...
           cd cmd/create-user
           go test
-        env:
-          AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
-          AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
-          AWS_REGION: ${{ secrets.AWS_REGION }}
 
   publish:
     name: Publish
     runs-on: ubuntu-latest
     if: (github.ref == 'ref/heads/master' && github.event_name == 'push') || github.event_name == 'pull_request' || github.event_name == 'workflow_dispatch'
     needs: test
+    outputs:
+      version: ${{ steps.publish.outputs.version }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -79,11 +82,9 @@ jobs:
           path: dist/
 
       - name: Upload To S3
+        id: publish
         run: ./scripts/publish.sh
         env:
-          AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
-          AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
-          AWS_REGION: ${{ secrets.AWS_REGION }}
           FILE: dist/build.zip
           S3_BUCKET: ${{ secrets.S3_SOURCE_BUCKET }}
           S3_KEY: create-user/${{github.run_id}}.zip
@@ -100,14 +101,11 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Deploy
-        run: ./scripts/deploy_api.sh
+        run: ./scripts/deploy_function.sh
         env:
-          AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
-          AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
-          AWS_REGION: ${{ secrets.AWS_REGION }}
-          REST_API_ID: ${{ secrets.REST_API_ID }}
-          DESCRIPTION: "Deploy Function goidc-create-user (${{github.run_id}})"
+          NAME: goidc-create-user
           STAGE: dev
+          VERSION: ${{ needs.publish.outputs.version }}
 
   deployTest:
     name: Deploy Test
@@ -120,14 +118,11 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Deploy
-        run: ./scripts/deploy_api.sh
+        run: ./scripts/deploy_function.sh
         env:
-          AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
-          AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
-          AWS_REGION: ${{ secrets.AWS_REGION }}
-          REST_API_ID: ${{ secrets.REST_API_ID }}
-          DESCRIPTION: "Deploy Function goidc-create-user (${{github.run_id}})"
+          NAME: goidc-create-user
           STAGE: test
+          VERSION: ${{ needs.publish.outputs.version }}
 
   deployProd:
     name: Deploy Prod
@@ -140,11 +135,8 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Deploy
-        run: ./scripts/deploy_api.sh
+        run: ./scripts/deploy_function.sh
         env:
-          AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
-          AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
-          AWS_REGION: ${{ secrets.AWS_REGION }}
-          REST_API_ID: ${{ secrets.REST_API_ID }}
-          DESCRIPTION: "Deploy Function goidc-create-user (${{github.run_id}})"
+          NAME: goidc-create-user
           STAGE: prod
+          VERSION: ${{ needs.publish.outputs.version }}
